--- a/ansible.cfg
+++ b/ansible.cfg
@@ -25,10 +25,10 @@
 #module_lang    = C
 #module_set_locale = False
 
-callback_whitelist = cgroup_perf_recap
+callback_whitelist=cgroup_perf_recap
 
 [callback_cgroup_perf_recap]
-control_group = ex447_stats
+control_group=ex447_stats
 
 # plays will gather facts by default, which contain information about
 # the remote system.
